tests/fixtures/errors/postprocess/variants/reject-promise/postprocess.js
module.exports = require("./hack")(async () => {
  throw "rejected!";
});
